--- a/loughati/package.json
+++ b/loughati/package.json
@@ -12,11 +12,12 @@
     "test": "npm run unit && npm run e2e",
     "build": "node build/build.js"
   },
-  "proxy" : "http://00c7f7733e:pECjS4uI@192.3.203.182:4444",
+  "proxy": "http://00c7f7733e:pECjS4uI@192.3.203.182:4444",
   "dependencies": {
     "bootstrap-vue": "^2.0.1",
     "vue": "^2.5.2",
     "vue-material-design-icons": "^4.0.1",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
